--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
   <img src="./dog.jpg" />
   <!-- The actual snackbar -->
   <div id="snackbar">A new version of this app is available. Click <a id="reload">here</a> to update.</div>
+  <p>test</p>
 </body>
 <script>
 
